# poc-cdk

./: .gitignore  cdk.json  jest.config.js  package-lock.json  package.json
.github/workflows/: deploy.yml
lib/: spa-global-stack.ts  spa-stack.ts
lib/constructs/: alb-fargate.ts  alb-service.ts  cloudfront-distribution.ts  cognito.ts  ecs-cluster.ts  edge-auth.ts  github-actions-role.ts  github-oidc.ts  s3-static-site.ts  waf.ts
lib/constructs/global/: cloudfront-distribution.ts  edge-auth.ts  waf.ts
lib/constructs/global/lambdas/edge-auth/: tsconfig.json
lib/constructs/lambdas/edge-auth/: index.ts  package.json
lib/constructs/regional/: alb-fargate.ts  alb-service.ts  cognito.ts  ecr-repository.ts  ecs-cluster.ts  github-actions-role.ts  github-oidc.ts  s3-static-site.ts
lib/constructs/shared/: production-restrictions.ts
lib/utils/: jwks-cache.ts
sample-app/: Dockerfile  app.py  index.html  pyproject.toml
scripts/: configure-cloudfront.sh  create-github-oidc.sh
tests/: setup.ts
tests/unit/: jwt.test.ts
